2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_constant_array_constructor,
	trans_constant_array_constructor): Rename the former to the latter.
	Don't set the rank of the temporary for the loop.  Remove then unused
	loop argument.
	(gfc_trans_array_constructor): Update call.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_scalarizing_loops): Stop loop before end
	marker, not after it.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_conv_loop_setup): Also skip temporary arrays.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_conv_ss_startstride): Access array bounds along
	array dimensions instead of loop dimensions.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Assertify one condition.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_walk_array_ref): Skip coarray dimensions.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (get_array_ref_dim): Remove redundant condition.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Move common code...
	(add_array_offset): ...into that new function.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Use loop's dimension instead
	of array's dimention. Check that it is indeed the same.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Remove redundant assertion.
	Special case outermost loop.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Factor loop index
	initialization.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Move code earlier.

2011-11-03  Mikael Morin  <mikael@gcc.gnu.org>

	* trans-array.c (gfc_trans_preloop_setup): Move array reference
	initialisation earlier. Factor subsequent array references.
